# SkillBench-PD

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NEXT_LEVEL_TODO.md  PLANS.md  QUESTIONS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.codex/: PLANS.md
.github/workflows/: ci.yml
.specstory/history/: 2025-10-17_18-32Z-commit-and-push-code-to-github.md
bench/: __init__.py  cli.py  experiment.py  harness.py  judges.py  providers.py  regression.py  report.py
bench/report_assets/: app.js  style.css
configs/: bench.yaml
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DEMO_PLAYBOOK.md  FAQ.md  HELP.md  SHOWCASE.md  TRY_IT.md  WALKTHROUGH.md
docs/plans/: 2026-02-15-release-ready-v1-design.md  2026-02-15-release-ready-v1.md
examples/: demo_run.py
results/: aggregates_by_mode.csv  aggregates_by_task.csv  deltas_by_mode.csv
sample_results/: aggregates_by_mode.csv  aggregates_by_task.csv  deltas_by_mode.csv
scripts/: build_showcase_data.py
showcase/: app.js  evidence.html  guide.html  index.html  non-technical.html  styles.css  technical.html  vercel.json
showcase/data/: evidence.json
skills/brand-voice/: SKILL.md
skills/brand-voice/references/: brand-voice.md  reporting-style.md
skills/brand_voice/: SKILL.md
tasks/: t1_rewrite_brand.json  t2_format_policy.json  t3_summarize_metrics.json
tests/: test_cli.py  test_config_validation.py  test_experiment.py  test_harness.py  test_judges.py  test_report.py  test_showcase_data.py
