[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillbench-pd"
version = "0.1.0"
description = "Benchmark for measuring progressive disclosure effects in Agent Skills"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "SkillBench-PD authors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing :: Benchmark"
]
dependencies = [
  "PyYAML>=6.0.1",
  "tabulate>=0.9.0",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.26.0"]
dev = [
  "build>=1.2.2",
  "pyright>=1.1.390",
  "pytest>=7.4",
  "ruff>=0.9.1"
]

[project.scripts]
skillbench-pd = "bench.cli:main"

[tool.setuptools.packages.find]
include = ["bench", "bench.*"]

[tool.setuptools.package-data]
bench = ["report_assets/*.css", "report_assets/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
